cmake_minimum_required(VERSION 3.16)
project(ssphh-all)

set(CMAKE_C_STANDARD            99)
set(CMAKE_C_STANDARD_REQUIRED   ON)
set(CMAKE_CXX_EXTENSIONS        OFF)
set(CMAKE_CXX_STANDARD          17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (APPLE)
    include_directories(/usr/local/include)
endif()

include_directories(${PROJECT_SOURCE_DIR}/imgui)
include_directories(${PROJECT_SOURCE_DIR}/hatchetfish/include)
include_directories(${PROJECT_SOURCE_DIR}/damselfish/include)
include_directories(${PROJECT_SOURCE_DIR}/fluxions-base/include)
include_directories(${PROJECT_SOURCE_DIR}/fluxions-gte/include)
include_directories(${PROJECT_SOURCE_DIR}/fluxions-ssg/include)
include_directories(${PROJECT_SOURCE_DIR}/fluxions-renderer/include)
include_directories(${PROJECT_SOURCE_DIR}/fluxions/include)
include_directories(${PROJECT_SOURCE_DIR}/starfish/include)
include_directories(${PROJECT_SOURCE_DIR}/viperfish/include)
include_directories(${PROJECT_SOURCE_DIR}/unicornfish/include)
include_directories(${PROJECT_SOURCE_DIR}/ssphh/include)

add_subdirectory(${PROJECT_SOURCE_DIR}/hatchetfish)
add_subdirectory(${PROJECT_SOURCE_DIR}/damselfish)
add_subdirectory(${PROJECT_SOURCE_DIR}/fluxions-gte)
add_subdirectory(${PROJECT_SOURCE_DIR}/fluxions-base)
add_subdirectory(${PROJECT_SOURCE_DIR}/fluxions-ssg)
add_subdirectory(${PROJECT_SOURCE_DIR}/fluxions-renderer)
add_subdirectory(${PROJECT_SOURCE_DIR}/fluxions)
add_subdirectory(${PROJECT_SOURCE_DIR}/starfish)
add_subdirectory(${PROJECT_SOURCE_DIR}/viperfish)
add_subdirectory(${PROJECT_SOURCE_DIR}/unicornfish)
add_subdirectory(${PROJECT_SOURCE_DIR}/ssphh)

#add_subdirectory(ssphh-tests)
